integracion de intersection observer api en el modulo 1 solo 50%

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -35,8 +35,9 @@
         <div class="form singupForm">
             <form id="formulario" [formGroup]="myFormRegister" (ngSubmit)="register()" >
                 <h3>Registrate</h3>
+                <input type="text" placeholder="Nombres" formControlName="name" required>
+                <input type="text" placeholder="Apellidos" formControlName="apellidos" required>
                 <input type="text" placeholder="No. Socio" formControlName="nSocio" required>
-                <input type="text" placeholder="Nombre Completo" formControlName="name" required>
                 <input type="email" placeholder="Correo" formControlName="email" required>
                 <input type="password" placeholder="Contraseña" id="passwordUser" formControlName="password" required>
                 <input type="submit" value="Registrarme" id="btn-login" [disabled]="myFormRegister.invalid">
