--- a/src/app/pages/components/retro-act6/retro-act6.component.html
+++ b/src/app/pages/components/retro-act6/retro-act6.component.html
@@ -63,15 +63,32 @@
   <!-- Crea una tabla de 3 x 2 -->
   <form [formGroup]="respForm" (ngSubmit)="onSubmit()">
     <div class="d-flex flex-wrap gap-2">
-      <p class="inciso" [ngClass]="{'respCor':evaluarRespuesta('resp1') === true, 'respInc' : evaluarRespuesta('resp1') === false, 'select': inputSelect('resp1')}">Ahorro hormiga <input type="text" maxlength="1" alt="4" class="border border-2 rounded-pill text-center" formControlName="resp1" style="width: 30px;"></p>
-      <p class="inciso" [ngClass]="{'respCor':evaluarRespuesta('resp2') === true, 'respInc' : evaluarRespuesta('resp2') === false, 'select': inputSelect('resp2')}">Gasto hormiga <input type="text" maxlength="1" alt="2" class="border border-2 rounded-pill text-center" formControlName="resp2" style="width: 30px;"></p>
-      <p class="inciso" [ngClass]="{'respCor':evaluarRespuesta('resp3') === true, 'respInc' : evaluarRespuesta('resp3') === false, 'select': inputSelect('resp3')}">Plazo fijo <input type="text" maxlength="1" alt="3" class="border border-2 rounded-pill text-center" formControlName="resp3" style="width: 30px;"></p>
+      <p class="inciso"
+        [ngClass]="{'respCor':evaluarRespuesta('resp1') === true, 'respInc' : evaluarRespuesta('resp1') === false, 'select': inputSelect('resp1')}">
+        Ahorro hormiga <input type="text" maxlength="1" alt="4" class="border border-2 rounded-pill text-center"
+          formControlName="resp1" style="width: 30px;"></p>
+      <p class="inciso"
+        [ngClass]="{'respCor':evaluarRespuesta('resp2') === true, 'respInc' : evaluarRespuesta('resp2') === false, 'select': inputSelect('resp2')}">
+        Gasto hormiga <input type="text" maxlength="1" alt="2" class="border border-2 rounded-pill text-center"
+          formControlName="resp2" style="width: 30px;"></p>
+      <p class="inciso"
+        [ngClass]="{'respCor':evaluarRespuesta('resp3') === true, 'respInc' : evaluarRespuesta('resp3') === false, 'select': inputSelect('resp3')}">
+        Plazo fijo <input type="text" maxlength="1" alt="3" class="border border-2 rounded-pill text-center"
+          formControlName="resp3" style="width: 30px;"></p>
 
-      <p class="inciso" [ngClass]="{'respCor':evaluarRespuesta('resp4') === true, 'respInc' : evaluarRespuesta('resp4') === false, 'select': inputSelect('resp4')}">Simulador de crédito <input type="text" maxlength="1" alt="1" class="border border-2 rounded-pill text-center" formControlName="resp4" style="width: 30px;"></p>
-      <p class="inciso" [ngClass]="{'respCor':evaluarRespuesta('resp5') === true, 'respInc' : evaluarRespuesta('resp5') === false, 'select': inputSelect('resp5')}">Tasa de interés <input type="text" maxlength="1" alt="5" class="border border-2 rounded-pill text-center" formControlName="resp5" style="width: 30px;">
+      <p class="inciso"
+        [ngClass]="{'respCor':evaluarRespuesta('resp4') === true, 'respInc' : evaluarRespuesta('resp4') === false, 'select': inputSelect('resp4')}">
+        Simulador de crédito <input type="text" maxlength="1" alt="1" class="border border-2 rounded-pill text-center"
+          formControlName="resp4" style="width: 30px;"></p>
+      <p class="inciso"
+        [ngClass]="{'respCor':evaluarRespuesta('resp5') === true, 'respInc' : evaluarRespuesta('resp5') === false, 'select': inputSelect('resp5')}">
+        Tasa de interés <input type="text" maxlength="1" alt="5" class="border border-2 rounded-pill text-center"
+          formControlName="resp5" style="width: 30px;">
       </p>
-      <p class="inciso" [ngClass]="{'respCor':evaluarRespuesta('resp6') === true, 'respInc' : evaluarRespuesta('resp6') === false, 'select': inputSelect('resp6')}">Endeudamiento responsable <input type="text" maxlength="1" alt="6" class="border border-2 rounded-pill text-center" formControlName="resp6"
-          style="width: 30px;"></p>
+      <p class="inciso"
+        [ngClass]="{'respCor':evaluarRespuesta('resp6') === true, 'respInc' : evaluarRespuesta('resp6') === false, 'select': inputSelect('resp6')}">
+        Endeudamiento responsable <input type="text" maxlength="1" alt="6"
+          class="border border-2 rounded-pill text-center" formControlName="resp6" style="width: 30px;"></p>
 
     </div>
 
@@ -79,15 +96,8 @@
       style="width: 100%; max-width: 200px; margin: 0 auto;">Submit</button>
   </form>
 
-  <div [ngClass]="respForm.valid && submitted ? 'd-block' : 'd-none'" class="position-relative" style="width: 100%; height: 100vh;">
-    <div class="position-fixed top-50 start-50 translate-middle" style="background-image: url(../../../../assets/confeti.webp); width: 100%; height: 100vh;">
-      <img src="../../../../assets/aplause.gif" alt="Aplauso gif" width="120px">
-      <h3 class="fs-2"><strong> FELICIDADES COMPLETASTE EXITOSAMENTE EL MODULO 1 </strong></h3>
-      <p class="fs-3">Tu avance ha sido guardado y aparecera en tu perfil</p>
-      <p class="fs-4">Serás redirigido al menú de inicio en: <strong>{{contador}}</strong></p>
-    </div>
-
-  </div>
-
-
 </div>
+
+@defer (when finalizadoP) {
+  <done-module noModulo="6"></done-module>
+}
