--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -7,7 +7,7 @@
       <h1 class="animate__animated animate__fadeInDown">EDUCACIÓN COOPERATIVA Y FINANCIERA</h1>
       <h2 class="animate__animated animate__fadeIn animate__delay-1s">SAN PABLO</h2>
       <p class="animate__animated animate__fadeInLeft animate__delay-2s"><strong>¡BIENVENIDO!</strong></p>
-      <p class="animate__animated animate__fadeInLeft animate__delay-3s"><strong>Nombre:</strong> {{usuario.name}} </p>
+      <p class="animate__animated animate__fadeInLeft animate__delay-3s"><strong>Nombre:</strong>{{usuario.name}} {{usuario.apellidos}} </p>
 
       <p class="animate__animated animate__fadeInLeft animate__delay-4s"><strong>No Socio: </strong>{{usuario.nSocio}}</p>
     </div>
