--- a/src/app/pages/page/modulo4/modulo4.component.scss
+++ b/src/app/pages/page/modulo4/modulo4.component.scss
@@ -73,7 +73,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: end;
+      align-items: flex-end;
 
       @media (max-width: 767px) {
         align-items: center;
